After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669913 - [PATCH] Fix a possible memory leak in treeview_selection_changed()
[PATCH] Fix a possible memory leak in treeview_selection_changed()
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-11 23:18 UTC by Daniel Trebbien
Modified: 2012-02-12 10:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix (1.27 KB, patch)
2012-02-11 23:19 UTC, Daniel Trebbien
none Details | Review

Description Daniel Trebbien 2012-02-11 23:18:28 UTC
If `notebook` is not NULL, then it needs to be unrefed.
Comment 1 Daniel Trebbien 2012-02-11 23:19:50 UTC
Created attachment 207369 [details] [review]
Fix
Comment 2 Paolo Borelli 2012-02-12 10:53:39 UTC
Looks good. pushed.