Fix possible memory leak

In treeview_selection_changed(), if `notebook` is not NULL, then it needs
to be unrefed.

See:  http://developer.gnome.org/gtk/unstable/GtkTreeModel.html#gtk-tree-model-get

https://bugzilla.gnome.org/show_bug.cgi?id=669913